crates/tplot/tests/snapshots/e2e_vertical_and_hist__histogram_neutral.snap
---
source: crates/tplot/tests/e2e_vertical_and_hist.rs
expression: strip_ansi(&out)
---
   11             ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
    6             ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
                  ████████                                                      
        ▆▆▆▆▆▆▆▆  ████████                                                      
        ████████  ████████                                                      
        ████████  ████████  ▇▇▇▇▇▇▇▇                                            
        ████████  ████████  ████████                                            
        ████████  ████████  ████████  ▇▇▇▇▇▇▇▇  ▇▇▇▇▇▇▇▇            ▇▇▇▇▇▇▇▇    
    0   ████████  ████████  ████████  ████████  ████████            ████████    
         10–40     40–70     70–100   100–130   130–160   160–190   190–220
