crates/tplot/tests/snapshots/e2e_vertical_and_hist__vertical_bar_default.snap
---
source: crates/tplot/tests/e2e_vertical_and_hist.rs
expression: strip_ansi(&out)
---
  193                       ████████                                            
                  ▄▄▄▄▄▄▄▄  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
                  ████████  ████████                                            
   96             ████████  ████████            ▄▄▄▄▄▄▄▄                        
                  ████████  ████████            ████████                        
                  ████████  ████████  ▄▄▄▄▄▄▄▄  ████████                        
                  ████████  ████████  ████████  ████████                        
                  ████████  ████████  ████████  ████████                        
                  ████████  ████████  ████████  ████████  ▆▆▆▆▆▆▆▆              
                  ████████  ████████  ████████  ████████  ████████              
                  ████████  ████████  ████████  ████████  ████████              
                  ████████  ████████  ████████  ████████  ████████              
                  ████████  ████████  ████████  ████████  ████████              
    0             ████████  ████████  ████████  ████████  ████████              
                     NA       EMEA     LATAM      APAC       AU   

       EMEA led with 193, the highest of 5 series.
